--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <version>1.10</version>
         </dependency>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.4</version>
@@ -118,6 +123,7 @@
             <groupId>com.google.code.caliper</groupId>
             <artifactId>caliper</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
