--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <groupId>org.geolatte</groupId>
     <artifactId>geolatte-geom</artifactId>
     <packaging>jar</packaging>
-    <version>0.9</version>
+    <version>1.0-SNAPSHOT</version>
     <description>
         This geoLatte-geom library offers a geometry model that conforms to the OGC Simple Features for SQL specification.
     </description>
