--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ notifications:
     - karel@geovise.com
 env:
   global:
-  - secure: G+8McDItAJInDRe28m4TVT78LuwzW7WUA/f4ZJUqf5yYdx6pcO20if+l4yQT8ufdE7vpyGO/T4w3iu8RL0Ln0Sl7TlVTBiWW6A5LnJ1/fl8P1/PSpBdgozxxezwPIlFP5UQzL9/hZPUGB2/fD3vLR3NvMJZJ6TIzl8uouGDW8EM=
-  - secure: LbfGcUboNsfAon9W3MP+XxtM9O3giR71plb4tB2UjcDvW3TatDQdcxEoF7CVVVQLNLbRrSX0iFs8aA2h1Uw4nM1oNS9kY8GKwYEZyYplu4rN05UWCIkqoCA0oWeqmHqZLNftrYdysy3hroJZOQccE+DHhj3w1Pqu3rfLjpeNAw8=
-
+  - secure: "BPiU7uZkHjfV6HAr/40Xj4yGi/kmcjpth8+1ewfVH+jKGPTqL7Y6cmvrVEoDS789jyDYI5qd37AzrKpZniw9UaYvib7nV9ZIrszTK2EYs2EcTVj19PldLohGdRRQUuA4hIAGlgBcM0WzZEK8O5VgLuC8MMors01knJeGJ0uNZik="
+  - secure: "wp8Szmt8rHbesNTSMQFvJmWhMWr8VZ4K1d/qeLe69UwUH0TflMedREqzC+TUJ/qt74sUvoXPmo3wocTEUai1vjm3v7O5DsP5rOG83ty6EtNiGOPlYJC2lfMo6Jod1mOEzXfxIpQ0UKMdbUYROfN7efyI5JRaxO3ctlK9R8t4Aoc="
 after_success:
   - "[[ $TRAVIS_BRANCH == \"master\" ]] && { mvn clean deploy; };"
