--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <artifactId>geolatte</artifactId>
     <name>geolatte</name>
     <packaging>pom</packaging>
-    <version>${project.version}</version>
+    <version>1.2.0-SNAPSHOT</version>
 
 	<modules>
 		<module>geom</module>
