--- a/json/pom.xml
+++ b/json/pom.xml
@@ -6,6 +6,12 @@
         <version>1.2.0</version>
     </parent>
     <artifactId>geolatte-geojson</artifactId>
+    <description>
+        This geoLatte-geojson library provides a Jackson module for serializing Geometry objects to GeoJson
+        specification.
+    </description>
+    <url>https://github.com/geolatte/geolatte-geom</url>
+
     <dependencies>
         <dependency>
             <groupId>org.geolatte</groupId>
