--- a/geom/pom.xml
+++ b/geom/pom.xml
@@ -17,7 +17,7 @@
 	<parent>
 		<groupId>org.geolatte</groupId>
 		<artifactId>geolatte</artifactId>
-		<version>1.3.0-SNAPSHOT</version>
+		<version>1.3.0</version>
 	</parent>
     <artifactId>geolatte-geom</artifactId>
     <name>geolatte-geom</name>
