--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <artifactId>geolatte</artifactId>
     <name>geolatte</name>
     <packaging>pom</packaging>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
 
 	<description>
 		This geoLatte-geom project contains modules for working with geometries.
