--- a/geom/pom.xml
+++ b/geom/pom.xml
@@ -36,7 +36,7 @@
 		<dependency>
 			<groupId>org.locationtech.jts</groupId>
 			<artifactId>jts-core</artifactId>
-			<version>1.15.1</version>
+			<version>1.16.0-RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
