--- a/json/pom.xml
+++ b/json/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.geolatte</groupId>
         <artifactId>geolatte</artifactId>
-        <version>1.4.0-SNAPSHOT</version>
+        <version>1.4.0</version>
     </parent>
     <artifactId>geolatte-geojson</artifactId>
     <description>
