Simplify POM setup
Using new maven features (see
https://maven.apache.org/maven-ci-friendly.html)

--- a/json/pom.xml
+++ b/json/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.geolatte</groupId>
         <artifactId>geolatte</artifactId>
-        <version>1.5.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>geolatte-geojson</artifactId>
     <description>
