--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <artifactId>geolatte</artifactId>
     <name>geolatte</name>
     <packaging>pom</packaging>
-    <version>1.5.0-SNAPSHOT</version>
+    <version>${revision}</version>
 
 	<description>
 		This geoLatte-geom project contains modules for working with geometries.
@@ -37,6 +37,7 @@
 	</organization>
 
 	<properties>
+		<revision>1.5.0-SNAPSHOT</revision>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
