--- a/geom/pom.xml
+++ b/geom/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>1.2.27</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -80,9 +80,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>dom4j</groupId>
+			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
-			<version>1.6.1</version>
+			<version>2.1.0</version>
 			<scope>test</scope>
 		</dependency>
 
