--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,8 @@
         <revision>1.7.0-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+        <jts-core.version>1.18.0</jts-core.version>
     </properties>
 
     <licenses>
