--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     </organization>
 
     <properties>
-        <revision>1.9.1-SNAPSHOT</revision>
+        <revision>1.9.1</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <jts-core.version>1.19.0</jts-core.version>
