--- a/geom/pom.xml
+++ b/geom/pom.xml
@@ -73,6 +73,20 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-main</artifactId>
+			<version>32.2</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.geotools</groupId>
+			<artifactId>gt-epsg-hsql</artifactId>
+			<version>32.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 
